# open-epidemic-game

./: .gitignore  DEVLOG  DEVLOG.md  Epidemic.cabal  FSM.hs  Game.hs  Germ.hs  Graphics.hs  JuicyPixelsTest.hs  MainLib.hs  MainSDL.hs  Makefile  README.md  RasterificTest.hs  THANKS  TODO  cairo-interactive.sh  cs-view  ghci  ios-aarch64-build.sh  ios-arm-build.sh  ios-full-build.sh  ios-i386-build.sh  ios-simulator-build.sh  mainc.c  profile-macosx.sh  reactive  run-macosx.sh  setup.sh  show  stack.yaml  update-ios-simulator.sh
Backend/: SDL.hs
design-log/: README.md
extra-src/: Events.hs  SDLTest.hs
extra-src/font-test/: FontTest.hs  run.sh
html/: android-install.html  deploy.sh  index.html
src/: AndroidMain.hs  CUtil.hs  CairoInteractive.hs  Coordinate.hs  Foreign.hs  FrameRateBuffer.hs  FreeType.hs  GLM.hs  GLSLPrograms.hs  Game.hs  GameEvent.hs  GameM.hs  GenerateIcons.hs  Graphics.hs  GraphicsGL.hs  HipM.hs  IOSMain.hs  Main.hs  MainLib.hs  OpenGLTest.hs  Platform.hs  ProceduralMusic.hs  ProfileGraphics.hs  Types.hs  Util.hs  freetype_util.c  objc_util.m  resource_path.m  util.c
src/Backend/: Events.hs  SDL.hs
src/GLSLPrograms/: SeparateShaders.hs
src/Game/: Types.hs
src/GraphicsGL/: GLM.hs  Util.hs
src/GraphicsGL/GLSLPrograms/: OneBigShader.hs  SeparateShaders.hs
src/Types/: Basic.hs  Constants.hs  GLM.hs  Game.hs
txt/: talk-notes.txt  time-spent.txt
