name:              Epidemic
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Sean Seefried
maintainer:        Sean Seefried
synopsis:          A game about exponential growth
description:       A game about exponential growth
category:          Web
stability:         Experimental
cabal-version:     >= 1.16
build-type:        Simple
homepage:          http://seanseefried.com

build-depends: base

executable         Epidemic
    hs-source-dirs : src
    default-language:  Haskell2010
    ghc-options: -Wall -threaded -O2


    main-is:       Main.hs
    hs-source-dirs: .

    build-depends: Hipmunk == 5.2.0.16
                 , MonadRandom ==0.3
                 , SDL2 == 0.1.0
                 , sdl2-mixer == 0.1.0.0
                 , cairo == 0.12.5.3
                 , control-monad-free == 0.5.3
                 -- everything below this line is a dependency of above
                 -- the line. We fix to specific versions
                 , base == 4.6.0.1
                 , containers == 0.5.0.0
                 , time == 1.4.0.1
                 , StateVar == 1.0.0.0
                 , mtl == 2.2.1
                 , primitive == 0.5.4.0
                 , random == 1.1
                 , text == 1.2.0.0
                 , transformers == 0.4.1.0
                 , utf8-string == 0.3.8
                 , vector == 0.10.12.1