name:              Epidemic
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Sean Seefried
maintainer:        Sean Seefried
synopsis:          A game about exponential growth
description:       A game about exponential growth
category:          Web
stability:         Experimental
cabal-version:     >= 1.16
build-type:        Simple
homepage:          http://seanseefried.com

Flag android
  Description: Build for Android
  Default: False

Flag nosound
  Description: No sound
  Default: False

Flag ios
  Description: Build for iOS
  Default: False

Flag debug-game
  Description: debug the game
  Default: False

Flag debug-system
  Description: Print debug info about the system on the screen
  Default: False


library
    hs-source-dirs:   src
    default-language: Haskell2010

    Exposed-Modules: AndroidMain, Backend.SDL, Backend.Events, Game, GameM, Types, Platform
                   , Graphics, GraphicsGL, CUtil, Util, FrameRateBuffer, FreeType
                   , Coordinate, GameEvent
    exposed: True
    if flag(android)
      cpp-options: -DANDROID
      cc-options: -DANDROID

    c-sources: src/util.c src/freetype_util.c

    if flag(android)
      ghc-options: -O2 -static
      Buildable: True
      build-depends: Hipmunk == 5.2.0.16
                 , MonadRandom ==0.3
                 , SDL2 == 0.1.0
                 , sdl2-mixer == 0.1.0.0
                 , cairo == 0.13.0.5
                 , control-monad-free == 0.5.3
                 , OpenGLRaw == 1.5.0.0
                 -- everything below this line is a dependency of above
                 -- the line. We fix to specific versions
                 , base >= 4.7.0.0
                 , containers == 0.5.5.1
                 , time == 1.4.2
                 , StateVar == 1.0.0.0
                 , mtl == 2.2.1
                 , primitive == 0.5.4.0
                 , random == 1.1
                 , text == 1.2.0.0
                 , transformers == 0.4.1.0
                 , utf8-string == 0.3.8
                 , vector == 0.10.12.1
                 , array == 0.5.0.0
                 , directory == 1.2.1.0
    else
      Buildable: False
    if flag(debug-game)
      cpp-options: -DDEBUG_GAME
      cc-options:  -DDEBUG_GAME
    if flag(debug-system)
      cpp-options: -DDEBUG_SYSTEM
      cc-options:  -DDEBUG_SYSTEM


executable         EpidemicStaticLib
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -W -O -staticlib -threaded -no-hs-main
    cpp-options:      -DIOS
    main-is:          IOSMain.hs

    c-sources: src/util.c src/freetype_util.c src/objc_util.m
    pkgconfig-depends: freetype2, cairo

    build-depends: Hipmunk
                 , MonadRandom
                 , SDL2
                 , sdl2-mixer
                 , cairo
                 , control-monad-free
                 , OpenGLRaw
                 -- everything below this line is a dependency of above
                 -- the line. We fix to specific versions
                 , base
                 , array
                 , containers
                 , time
                 , StateVar
                 , mtl
                 , primitive
                 , random
                 , text
                 , transformers
                 , utf8-string
                 , vector
                 , directory
    if flag(ios)
      Buildable: True
    else
      Buildable: False
    if flag(debug-game)
      cpp-options: -DDEBUG_GAME
      cc-options:  -DDEBUG_GAME
    if flag(debug-system)
      cpp-options: -DDEBUG_SYSTEM
      cc-options:  -DDEBUG_SYSTEM

executable         Epidemic
    hs-source-dirs : src
    default-language:  Haskell2010
    ghc-options: -W -threaded -O2
    ghc-prof-options: -prof -auto-all

    main-is:       Main.hs
    hs-source-dirs: .

    if flag(nosound)
      cpp-options: -DNOSOUND

    if flag(ios)
      ghc-options: -staticlib

    build-depends: Hipmunk
                 , MonadRandom
                 , SDL2
                 , OpenGLRaw
                 , sdl2-mixer
                 , cairo
                 , control-monad-free
                 -- everything below this line is a dependency of above
                 -- the line. We fix to specific versions
                 , base
                 , array
                 , containers
                 , time
                 , StateVar
                 , mtl
                 , primitive
                 , random
                 , text
                 , transformers
                 , utf8-string
                 , vector
                 , directory
    c-sources: src/util.c src/freetype_util.c src/objc_util.m
    pkgconfig-depends: freetype2, cairo

    if flag(android) || flag(ios)
      Buildable: False
    else
      Buildable: True
    if flag(debug-game)
      cpp-options: -DDEBUG_GAME
      cc-options:  -DDEBUG_GAME
    if flag(debug-system)
      cpp-options: -DDEBUG_SYSTEM
      cc-options:  -DDEBUG_SYSTEM

executable         GenerateIcons
    hs-source-dirs:    src
    default-language:  Haskell2010
    ghc-options:       -threaded -O2 -framework Foundation

    main-is:       GenerateIcons.hs
    hs-source-dirs: .

    c-sources: src/util.c src/objc_util.m

    build-depends: Hipmunk
                 , OpenGLRaw
                 , MonadRandom
                 , cairo
                 -- everything below this line is a dependency of above
                 -- the line. We fix to specific versions
                 , base
                 , containers
                 , time
                 , StateVar
                 , mtl
                 , primitive
                 , random
                 , text
                 , transformers
                 , utf8-string
                 , vector
    if flag(android) || flag(ios)
      Buildable: False
    else
      Buildable: True